# marathon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: release.md
.github/workflows/: release.yml
examples/: README.md  calculator.py  data.py  inference.py  model.yaml  run.py
examples/calculator/: calculator.py  run.py
examples/extra/: README.md
examples/extra/ensemble/: calculator.py  run.py
examples/extra/hermes/: run.py
examples/inference/: lj_data.py  model.py  run.py
examples/train_grain/: README.md  model.yaml  prepare_data.py  run.py  run.sh
examples/train_plain/: README.md  data.py  model.yaml  run.py
marathon/: README.md  __init__.py  elemental.py  utils.py
marathon/data/: README.md  __init__.py  batching.py  properties.py  sample.py  sizes.py  splits.py
marathon/emit/: README.md  __init__.py  checkpoint.py  log.py  plot.py  pretty.py  properties.py
marathon/ensemble/: README.md  __init__.py  loss.py  metrics.py  plot.py  predict.py
marathon/evaluate/: README.md  __init__.py  loss.py  metrics.py  predict.py  properties.py
marathon/extra/edge_to_edge/: README.md  __init__.py  batching.py  neighborlist.py
marathon/extra/ensemble/: README.md  __init__.py  predict.py
marathon/extra/hermes/: README.md  __init__.py  data_source.py  pain.py
marathon/extra/hermes/data/: README.md  __init__.py  sample.py
marathon/extra/hermes/data_source/: README.md  data_source.py  flatten_atoms.py  prepare.py
marathon/extra/hermes/tests/: test_batchers.py  test_data_source.py
marathon/extra/hermes/transforms/: README.md  __init__.py  dense.py  transforms.py
marathon/grain/: README.md  __init__.py
marathon/grain/data_source/: README.md  __init__.py  data_source.py  prepare.py  properties.py
marathon/grain/transforms/: README.md  __init__.py  transforms.py
marathon/io/: README.md  __init__.py  dicts.py  msgpack.py  yaml.py
tests/: lj.py  lj_data.py  test_data_pipeline.py  test_emit.py  test_ensemble_evaluate.py  test_evaluate.py  test_grain_batchers.py  test_grain_data_source.py  test_metrics.py
