[tool.poetry]
name = "marathon-train"
version = "0.2.1"
description = "experimental tooling for training machine learning interatomic potentials in jax"
authors = ["Marcel Langer <dev@marcel.science>"]
license = "MIT"
readme = "README.md"
packages = [{include = "marathon"}]

[tool.poetry.dependencies]
python = ">=3.7"
opsis = "*"
PyYAML = "*"
vesin = ">=0.3.2"
flax = "*"
wandb = { version = "*", optional = true}
ase = "*"
matplotlib = { version = "*", optional = true}
scipy = { version = "*", optional = true}
grain = { version = "*", optional = true}
mmap_ninja = { version = "*", optional = true}
numba = { version = "*", optional = true}
pytest = { version = "*", optional = true}
ruff = { version = "*", optional = true}

[tool.poetry.extras]
all = ["wandb", "scipy", "matplotlib", "pytest", "ruff", "grain", "mmap_ninja", "numba"]
wandb = ["wandb"]
plot = ["matplotlib"]
grain = ["grain", "mmap_ninja", "numba", "scipy"]
dev = ["pytest", "ruff"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]
typing-modules = ["jaxtyping"]

# E501: don't worry about line length (the formatter will take care of it)
# E741: don't worry about short variable names
# E731: don't worry about lambdas
# F722: jaxtyping+ruff problems, see https://github.com/astral-sh/ruff/issues/9860
# E402: we're ok with importing in arbitrary places (for inline testing and scripts)
ignore = ["E741", "E731", "F722", "E402", "E501"]

[tool.ruff.lint.isort]
section-order = ["numpy", "jax", "future", "standard-library", "third-party", "typing", "first-party", "local-folder"]
no-lines-before = ["jax", "numpy"]

[tool.ruff.lint.isort.sections]
"numpy" = ["numpy"]
"jax" = ["jax", "jax.numpy"]
"typing" = ["jaxtyping", "typing"]
